[package]
name = "file-sorter"
version = "1.0.1"
edition = "2024"
description = "A utility for sorting files based on file name rules into directories"
license = "MIT"
repository = "https://github.com/austingarrigus/sorter"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
regex = "1.11.3"
